proyectos/11/src/.antlr/JackGrammarParser.java
// Generated from /home/rvillegasm/src/st254/254srvillegasm/proyectos/10/src/JackGrammar.g4 by ANTLR 4.7.1
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class JackGrammarParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, T__34=35, T__35=36, T__36=37, T__37=38, 
		T__38=39, T__39=40, INTEGERCONSTANT=41, STRINGCONSTANT=42, IDENTIFIER=43, 
		WHITESPACE=44, INLINECOMENT=45, DOCCOMENT=46;
	public static final int
		RULE_classNT = 0, RULE_classVarDecNT = 1, RULE_typeNT = 2, RULE_subroutineDecNT = 3, 
		RULE_parameterListNT = 4, RULE_subroutineBodyNT = 5, RULE_varDecNT = 6, 
		RULE_classNameNT = 7, RULE_subroutineNameNT = 8, RULE_varNameNT = 9, RULE_statementsNT = 10, 
		RULE_statementNT = 11, RULE_letStatementNT = 12, RULE_ifStatementNT = 13, 
		RULE_whileStatementNT = 14, RULE_doStatementNT = 15, RULE_returnStatementNT = 16, 
		RULE_expressionNT = 17, RULE_termNT = 18, RULE_subroutineCallNT = 19, 
		RULE_expressionListNT = 20, RULE_opNT = 21, RULE_unaryOpNT = 22, RULE_keywordConstantNT = 23;
	public static final String[] ruleNames = {
		"classNT", "classVarDecNT", "typeNT", "subroutineDecNT", "parameterListNT", 
		"subroutineBodyNT", "varDecNT", "classNameNT", "subroutineNameNT", "varNameNT", 
		"statementsNT", "statementNT", "letStatementNT", "ifStatementNT", "whileStatementNT", 
		"doStatementNT", "returnStatementNT", "expressionNT", "termNT", "subroutineCallNT", 
		"expressionListNT", "opNT", "unaryOpNT", "keywordConstantNT"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'class'", "'{'", "'}'", "'static'", "'field'", "','", "';'", "'int'", 
		"'char'", "'boolean'", "'constructor'", "'function'", "'method'", "'void'", 
		"'('", "')'", "'var'", "'let'", "'['", "']'", "'='", "'if'", "'else'", 
		"'while'", "'do'", "'return'", "'.'", "'+'", "'-'", "'*'", "'/'", "'&'", 
		"'|'", "'<'", "'>'", "'~'", "'true'", "'false'", "'null'", "'this'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, "INTEGERCONSTANT", "STRINGCONSTANT", "IDENTIFIER", 
		"WHITESPACE", "INLINECOMENT", "DOCCOMENT"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "JackGrammar.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public JackGrammarParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class ClassNTContext extends ParserRuleContext {
		public ClassNameNTContext classNameNT() {
			return getRuleContext(ClassNameNTContext.class,0);
		}
		public List<ClassVarDecNTContext> classVarDecNT() {
			return getRuleContexts(ClassVarDecNTContext.class);
		}
		public ClassVarDecNTContext classVarDecNT(int i) {
			return getRuleContext(ClassVarDecNTContext.class,i);
		}
		public List<SubroutineDecNTContext> subroutineDecNT() {
			return getRuleContexts(SubroutineDecNTContext.class);
		}
		public SubroutineDecNTContext subroutineDecNT(int i) {
			return getRuleContext(SubroutineDecNTContext.class,i);
		}
		public ClassNTContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_classNT; }
	}

	public final ClassNTContext classNT() throws RecognitionException {
		ClassNTContext _localctx = new ClassNTContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_classNT);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(48);
			match(T__0);
			setState(49);
			classNameNT();
			setState(50);
			match(T__1);
			setState(54);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__3 || _la==T__4) {
				{
				{
				setState(51);
				classVarDecNT();
				}
				}
				setState(56);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(60);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__10) | (1L << T__11) | (1L << T__12))) != 0)) {
				{
				{
				setState(57);
				subroutineDecNT();
				}
				}
				setState(62);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(63);
			match(T__2);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ClassVarDecNTContext extends ParserRuleContext {
		public TypeNTContext typeNT() {
			return getRuleContext(TypeNTContext.class,0);
		}
		public List<VarNameNTContext> varNameNT() {
			return getRuleContexts(VarNameNTContext.class);
		}
		public VarNameNTContext varNameNT(int i) {
			return getRuleContext(VarNameNTContext.class,i);
		}
		public ClassVarDecNTContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_classVarDecNT; }
	}

	public final ClassVarDecNTContext classVarDecNT() throws RecognitionException {
		ClassVarDecNTContext _localctx = new ClassVarDecNTContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_classVarDecNT);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(65);
			_la = _input.LA(1);
			if ( !(_la==T__3 || _la==T__4) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			setState(66);
			typeNT();
			setState(67);
			varNameNT();
			setState(72);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__5) {
				{
				{
				setState(68);
				match(T__5);
				setState(69);
				varNameNT();
				}
				}
				setState(74);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(75);
			match(T__6);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TypeNTContext extends ParserRuleContext {
		public ClassNameNTContext classNameNT() {
			return getRuleContext(ClassNameNTContext.class,0);
		}
		public TypeNTContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_typeNT; }
	}

	public final TypeNTContext typeNT() throws RecognitionException {
		TypeNTContext _localctx = new TypeNTContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_typeNT);
		try {
			setState(81);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__7:
				enterOuterAlt(_localctx, 1);
				{
				setState(77);
				match(T__7);
				}
				break;
			case T__8:
				enterOuterAlt(_localctx, 2);
				{
				setState(78);
				match(T__8);
				}
				break;
			case T__9:
				enterOuterAlt(_localctx, 3);
				{
				setState(79);
				match(T__9);
				}
				break;
			case IDENTIFIER:
				enterOuterAlt(_localctx, 4);
				{
				setState(80);
				classNameNT();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SubroutineDecNTContext extends ParserRuleContext {
		public SubroutineNameNTContext subroutineNameNT() {
			return getRuleContext(SubroutineNameNTContext.class,0);
		}
		public ParameterListNTContext parameterListNT() {
			return getRuleContext(ParameterListNTContext.class,0);
		}
		public SubroutineBodyNTContext subroutineBodyNT() {
			return getRuleContext(SubroutineBodyNTContext.class,0);
		}
		public TypeNTContext typeNT() {
			return getRuleContext(TypeNTContext.class,0);
		}
		public SubroutineDecNTContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_subroutineDecNT; }
	}

	public final SubroutineDecNTContext subroutineDecNT() throws RecognitionException {
		SubroutineDecNTContext _localctx = new SubroutineDecNTContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_subroutineDecNT);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(83);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__10) | (1L << T__11) | (1L << T__12))) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			setState(86);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__13:
				{
				setState(84);
				match(T__13);
				}
				break;
			case T__7:
			case T__8:
			case T__9:
			case IDENTIFIER:
				{
				setState(85);
				typeNT();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			setState(88);
			subroutineNameNT();
			setState(89);
			match(T__14);
			setState(90);
			parameterListNT();
			setState(91);
			match(T__15);
			setState(92);
			subroutineBodyNT();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ParameterListNTContext extends ParserRuleContext {
		public List<TypeNTContext> typeNT() {
			return getRuleContexts(TypeNTContext.class);
		}
		public TypeNTContext typeNT(int i) {
			return getRuleContext(TypeNTContext.class,i);
		}
		public List<VarNameNTContext> varNameNT() {
			return getRuleContexts(VarNameNTContext.class);
		}
		public VarNameNTContext varNameNT(int i) {
			return getRuleContext(VarNameNTContext.class,i);
		}
		public ParameterListNTContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_parameterListNT; }
	}

	public final ParameterListNTContext parameterListNT() throws RecognitionException {
		ParameterListNTContext _localctx = new ParameterListNTContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_parameterListNT);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(106);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__7) | (1L << T__8) | (1L << T__9) | (1L << IDENTIFIER))) != 0)) {
				{
				{
				setState(94);
				typeNT();
				setState(95);
				varNameNT();
				}
				setState(103);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==T__5) {
					{
					{
					setState(97);
					match(T__5);
					setState(98);
					typeNT();
					setState(99);
					varNameNT();
					}
					}
					setState(105);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SubroutineBodyNTContext extends ParserRuleContext {
		public StatementsNTContext statementsNT() {
			return getRuleContext(StatementsNTContext.class,0);
		}
		public List<VarDecNTContext> varDecNT() {
			return getRuleContexts(VarDecNTContext.class);
		}
		public VarDecNTContext varDecNT(int i) {
			return getRuleContext(VarDecNTContext.class,i);
		}
		public SubroutineBodyNTContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_subroutineBodyNT; }
	}

	public final SubroutineBodyNTContext subroutineBodyNT() throws RecognitionException {
		SubroutineBodyNTContext _localctx = new SubroutineBodyNTContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_subroutineBodyNT);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(108);
			match(T__1);
			setState(112);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__16) {
				{
				{
				setState(109);
				varDecNT();
				}
				}
				setState(114);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(115);
			statementsNT();
			setState(116);
			match(T__2);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VarDecNTContext extends ParserRuleContext {
		public TypeNTContext typeNT() {
			return getRuleContext(TypeNTContext.class,0);
		}
		public List<VarNameNTContext> varNameNT() {
			return getRuleContexts(VarNameNTContext.class);
		}
		public VarNameNTContext varNameNT(int i) {
			return getRuleContext(VarNameNTContext.class,i);
		}
		public VarDecNTContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_varDecNT; }
	}

	public final VarDecNTContext varDecNT() throws RecognitionException {
		VarDecNTContext _localctx = new VarDecNTContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_varDecNT);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(118);
			match(T__16);
			setState(119);
			typeNT();
			setState(120);
			varNameNT();
			setState(125);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__5) {
				{
				{
				setState(121);
				match(T__5);
				setState(122);
				varNameNT();
				}
				}
				setState(127);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(128);
			match(T__6);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ClassNameNTContext extends ParserRuleContext {
		public TerminalNode IDENTIFIER() { return getToken(JackGrammarParser.IDENTIFIER, 0); }
		public ClassNameNTContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_classNameNT; }
	}

	public final ClassNameNTContext classNameNT() throws RecognitionException {
		ClassNameNTContext _localctx = new ClassNameNTContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_classNameNT);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(130);
			match(IDENTIFIER);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SubroutineNameNTContext extends ParserRuleContext {
		public TerminalNode IDENTIFIER() { return getToken(JackGrammarParser.IDENTIFIER, 0); }
		public SubroutineNameNTContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_subroutineNameNT; }
	}

	public final SubroutineNameNTContext subroutineNameNT() throws RecognitionException {
		SubroutineNameNTContext _localctx = new SubroutineNameNTContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_subroutineNameNT);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(132);
			match(IDENTIFIER);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VarNameNTContext extends ParserRuleContext {
		public TerminalNode IDENTIFIER() { return getToken(JackGrammarParser.IDENTIFIER, 0); }
		public VarNameNTContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_varNameNT; }
	}

	public final VarNameNTContext varNameNT() throws RecognitionException {
		VarNameNTContext _localctx = new VarNameNTContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_varNameNT);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(134);
			match(IDENTIFIER);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StatementsNTContext extends ParserRuleContext {
		public List<StatementNTContext> statementNT() {
			return getRuleContexts(StatementNTContext.class);
		}
		public StatementNTContext statementNT(int i) {
			return getRuleContext(StatementNTContext.class,i);
		}
		public StatementsNTContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statementsNT; }
	}

	public final StatementsNTContext statementsNT() throws RecognitionException {
		StatementsNTContext _localctx = new StatementsNTContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_statementsNT);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(139);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__17) | (1L << T__21) | (1L << T__23) | (1L << T__24) | (1L << T__25))) != 0)) {
				{
				{
				setState(136);
				statementNT();
				}
				}
				setState(141);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StatementNTContext extends ParserRuleContext {
		public LetStatementNTContext letStatementNT() {
			return getRuleContext(LetStatementNTContext.class,0);
		}
		public IfStatementNTContext ifStatementNT() {
			return getRuleContext(IfStatementNTContext.class,0);
		}
		public WhileStatementNTContext whileStatementNT() {
			return getRuleContext(WhileStatementNTContext.class,0);
		}
		public DoStatementNTContext doStatementNT() {
			return getRuleContext(DoStatementNTContext.class,0);
		}
		public ReturnStatementNTContext returnStatementNT() {
			return getRuleContext(ReturnStatementNTContext.class,0);
		}
		public StatementNTContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statementNT; }
	}

	public final StatementNTContext statementNT() throws RecognitionException {
		StatementNTContext _localctx = new StatementNTContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_statementNT);
		try {
			setState(147);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__17:
				enterOuterAlt(_localctx, 1);
				{
				setState(142);
				letStatementNT();
				}
				break;
			case T__21:
				enterOuterAlt(_localctx, 2);
				{
				setState(143);
				ifStatementNT();
				}
				break;
			case T__23:
				enterOuterAlt(_localctx, 3);
				{
				setState(144);
				whileStatementNT();
				}
				break;
			case T__24:
				enterOuterAlt(_localctx, 4);
				{
				setState(145);
				doStatementNT();
				}
				break;
			case T__25:
				enterOuterAlt(_localctx, 5);
				{
				setState(146);
				returnStatementNT();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LetStatementNTContext extends ParserRuleContext {
		public VarNameNTContext varNameNT() {
			return getRuleContext(VarNameNTContext.class,0);
		}
		public List<ExpressionNTContext> expressionNT() {
			return getRuleContexts(ExpressionNTContext.class);
		}
		public ExpressionNTContext expressionNT(int i) {
			return getRuleContext(ExpressionNTContext.class,i);
		}
		public LetStatementNTContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_letStatementNT; }
	}

	public final LetStatementNTContext letStatementNT() throws RecognitionException {
		LetStatementNTContext _localctx = new LetStatementNTContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_letStatementNT);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(149);
			match(T__17);
			setState(150);
			varNameNT();
			setState(155);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__18) {
				{
				setState(151);
				match(T__18);
				setState(152);
				expressionNT();
				setState(153);
				match(T__19);
				}
			}

			setState(157);
			match(T__20);
			setState(158);
			expressionNT();
			setState(159);
			match(T__6);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class IfStatementNTContext extends ParserRuleContext {
		public ExpressionNTContext expressionNT() {
			return getRuleContext(ExpressionNTContext.class,0);
		}
		public List<StatementsNTContext> statementsNT() {
			return getRuleContexts(StatementsNTContext.class);
		}
		public StatementsNTContext statementsNT(int i) {
			return getRuleContext(StatementsNTContext.class,i);
		}
		public IfStatementNTContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ifStatementNT; }
	}

	public final IfStatementNTContext ifStatementNT() throws RecognitionException {
		IfStatementNTContext _localctx = new IfStatementNTContext(_ctx, getState());
		enterRule(_localctx, 26, RULE_ifStatementNT);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(161);
			match(T__21);
			setState(162);
			match(T__14);
			setState(163);
			expressionNT();
			setState(164);
			match(T__15);
			setState(165);
			match(T__1);
			setState(166);
			statementsNT();
			setState(167);
			match(T__2);
			setState(173);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__22) {
				{
				setState(168);
				match(T__22);
				setState(169);
				match(T__1);
				setState(170);
				statementsNT();
				setState(171);
				match(T__2);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class WhileStatementNTContext extends ParserRuleContext {
		public ExpressionNTContext expressionNT() {
			return getRuleContext(ExpressionNTContext.class,0);
		}
		public StatementsNTContext statementsNT() {
			return getRuleContext(StatementsNTContext.class,0);
		}
		public WhileStatementNTContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_whileStatementNT; }
	}

	public final WhileStatementNTContext whileStatementNT() throws RecognitionException {
		WhileStatementNTContext _localctx = new WhileStatementNTContext(_ctx, getState());
		enterRule(_localctx, 28, RULE_whileStatementNT);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(175);
			match(T__23);
			setState(176);
			match(T__14);
			setState(177);
			expressionNT();
			setState(178);
			match(T__15);
			setState(179);
			match(T__1);
			setState(180);
			statementsNT();
			setState(181);
			match(T__2);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DoStatementNTContext extends ParserRuleContext {
		public SubroutineCallNTContext subroutineCallNT() {
			return getRuleContext(SubroutineCallNTContext.class,0);
		}
		public DoStatementNTContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_doStatementNT; }
	}

	public final DoStatementNTContext doStatementNT() throws RecognitionException {
		DoStatementNTContext _localctx = new DoStatementNTContext(_ctx, getState());
		enterRule(_localctx, 30, RULE_doStatementNT);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(183);
			match(T__24);
			setState(184);
			subroutineCallNT();
			setState(185);
			match(T__6);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ReturnStatementNTContext extends ParserRuleContext {
		public ExpressionNTContext expressionNT() {
			return getRuleContext(ExpressionNTContext.class,0);
		}
		public ReturnStatementNTContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_returnStatementNT; }
	}

	public final ReturnStatementNTContext returnStatementNT() throws RecognitionException {
		ReturnStatementNTContext _localctx = new ReturnStatementNTContext(_ctx, getState());
		enterRule(_localctx, 32, RULE_returnStatementNT);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(187);
			match(T__25);
			setState(189);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__14) | (1L << T__28) | (1L << T__35) | (1L << T__36) | (1L << T__37) | (1L << T__38) | (1L << T__39) | (1L << INTEGERCONSTANT) | (1L << STRINGCONSTANT) | (1L << IDENTIFIER))) != 0)) {
				{
				setState(188);
				expressionNT();
				}
			}

			setState(191);
			match(T__6);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExpressionNTContext extends ParserRuleContext {
		public List<TermNTContext> termNT() {
			return getRuleContexts(TermNTContext.class);
		}
		public TermNTContext termNT(int i) {
			return getRuleContext(TermNTContext.class,i);
		}
		public List<OpNTContext> opNT() {
			return getRuleContexts(OpNTContext.class);
		}
		public OpNTContext opNT(int i) {
			return getRuleContext(OpNTContext.class,i);
		}
		public ExpressionNTContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expressionNT; }
	}
